<resources>
    <string name="app_name">MyLogBook</string>
    <string name="multiplication">*</string>
    <string name="eight">8</string>
    <string name="nine">7</string>

    <string name="cancel">Cancel</string>
    <string name="choose">Choose</string>
    <string name="contact_image">Contact Image</string>
    <string name="save_contact">Save Contact</string>
    <string name="view_detail">View Detail</string>
    <string name="name">Name:</string>
    <string name="date_of_birth">Date of Birth:</string>
    <string name="email">Email:</string>
    <string name="choose_photo">Choose Photo</string>
</resources>