<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddContactActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginTop="@dimen/normal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivContactPhoto"
            android:scaleType="centerCrop"
            android:visibility="gone"
            android:layout_gravity="center"
            android:layout_width="100dp"
            android:layout_height="100dp"/>

        <Button
            android:id="@+id/btnChoosePhoto"
            android:text="@string/choose_photo"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:backgroundTint="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_margin="@dimen/normal_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/name"
                android:layout_width="100dp"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/etName"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" />
        </LinearLayout>

        <LinearLayout
            android:layout_margin="@dimen/normal_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/date_of_birth"
                android:layout_width="100dp"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/etDateOfBirth"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" />
        </LinearLayout>

        <LinearLayout
            android:layout_margin="@dimen/normal_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/email"
                android:layout_width="100dp"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/etEmail"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnViewDetail"
            android:text="@string/view_detail"
            android:layout_margin="@dimen/normal_margin"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:backgroundTint="@color/white"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btnSaveContact"
            android:text="@string/save_contact"
            android:layout_margin="@dimen/normal_margin"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:backgroundTint="@color/white"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</RelativeLayout>